--- a/templates/webui/profile.html
+++ b/templates/webui/profile.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8" />
     <title>Профиль пользоавтеля</title>
+    <link rel="stylesheet" href="{% static 'styling/base.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/accountstyle.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/layout.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/nav.css' %}" />
