--- a/templates/webui/request.html
+++ b/templates/webui/request.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8" />
     <title>Заявка на обмен</title>
+    <link rel="stylesheet" href="{% static 'styling/base.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/style.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/layout.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/nav.css' %}" />
