--- a/templates/webui/requests.html
+++ b/templates/webui/requests.html
@@ -54,10 +54,13 @@
                                 Дата подачи: {{ req.date_created|date:"d.m.Y" }}
                             </div>
                             <div class="request-info">
-                                Дата обмена:
+                                Дата старта:
                                 <span class="editable"
-                                      data-field="date_exchange"
-                                      data-request-id="{{ req.id }}">{{ req.date_exchange|date:"d.m.Y" }}</span>
+                                      data-field="start_date"
+                                      data-request-id="{{ req.id }}">{{ req.start_date|date:"d.m.Y" }}</span>
+                            </div>
+                            <div class="request-info">
+                                Свободен с: {{ req.available_from|date:"d.m.Y" }} по {{ req.available_to|date:"d.m.Y" }}
                             </div>
                         </div>
                     {% endfor %}
@@ -88,14 +91,28 @@
                                     </div>
                                 {% endif %}
 
-                                {% if req.user.profile.author_page_link %}
-                                    <div class="request-info">
-                                      <a href="{{ req.user.profile.author_page_link }}" target="_blank" class="author-page-link-btn">Перейти</a>
-                                    </div>
-                                {% endif %}
-
-                                <div class="request-info">Дата обмена: {{ req.date_exchange }}</div>
+                                <div class="request-info">Дата старта: {{ req.start_date }}</div>
+                                <div class="request-info">Свободен с: {{ req.available_from }} по {{ req.available_to }}</div>
                                 <div class="request-info">Дата подачи: {{ req.date_created }}</div>
+
+                                <div class="social-buttons separated">
+                                    {% if req.user.profile.vk_link %}
+                                        <a href="{{ req.user.profile.vk_link }}" class="social-btn vk-btn left">
+                                            <span class="logo-wrap">
+                                                <img src="{% static 'images/vk_logo.png' %}" alt="VK" class="social-logo">
+                                            </span>
+                                            <span class="label">ВКонтакте</span>
+                                        </a>
+                                    {% endif %}
+                                    {% if req.user.profile.litnet_link %}
+                                        <a href="{{ req.user.profile.litnet_link }}" class="social-btn litnet-btn right">
+                                            <span class="logo-wrap">
+                                                <img src="{% static 'images/litnet_logo.jpg' %}" alt="Litnet" class="social-logo">
+                                            </span>
+                                            <span class="label">Литнет</span>
+                                        </a>
+                                    {% endif %}
+                                </div>
 
                                 <form method="post" action="{% url 'toggle-save-request' req.id %}">
                                     {% csrf_token %}
