Ability to see who accepted your request; 404 custom handler if request is non-existent

--- a/templates/webui/profile.html
+++ b/templates/webui/profile.html
@@ -4,7 +4,7 @@
     {% load static %}
 
     <meta charset="UTF-8" />
-    <title>Профиль пользоавтеля</title>
+    <title>Профиль пользователя</title>
     <link rel="stylesheet" href="{% static 'styling/base.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/accountstyle.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/layout.css' %}" />
