added admin panel

--- a/templates/webui/home.html
+++ b/templates/webui/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'styling/nav.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/home.css' %}" />
 </head>
-<body class="home-body" style="background: #fcf4ec;">
+<body class="home-body">
     <header>
         <h1 class="brand-title"><span style="color:#F28519;">Book</span>Blog Обмен</h1>
         {% if user.is_authenticated %}
